# OpticsCompensation_s

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  cmake_batch.sh
script/: OpticsCompensation_s.anm
src/: CL_ErrorCode.h  cl_error_code.h  cl_kernel.cc  cl_kernel.h  cl_manager.cc  cl_manager.h  cpu_kernel.cc  cpu_kernel.h  debug_helper.h  exception.h  kernel.cl  optics_compensation_s.cc  out_debug.h  parameter.h  stopwatch.h
